--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "node-latex": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
