--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.4",
+    "multer": "^1.4.2",
     "node-latex": "^2.6.0"
   },
   "devDependencies": {
