--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "localStorage": "^1.0.4",
     "mongoose": "^5.6.4",
     "multer": "^1.4.2",
-    "node-latex": "^2.6.0"
+    "node-latex": "^2.6.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
