--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,9 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.1",
-    "uuid": "^3.3.2"
+    "reactstrap": "^8.0.1"
   },
+  "proxy":"http://localhost:4000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
